<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="2">

        <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:minHeight="256dip"
                android:minWidth="256dip"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/click_to_add_photo" />

        </RelativeLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/number1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand" />

            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner"/>
        </LinearLayout>

    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:hint="@string/clicktoadddesc" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/miscdetails"
        android:inputType="textMultiLine" />

</LinearLayout>